--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "topthink/framework": "5.1.*",
         "firebase/php-jwt": "^5.0",
         "workerman/workerman": "^3.5",
-        "workerman/phpsocket.io": "^1.1"
+        "workerman/phpsocket.io": "^1.1",
+        "workerman/gateway-worker": "^3.0"
     },
     "autoload": {
         "psr-4": {
